<resources>
    <string name="app_name">Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="info_title_hint">Title</string>
    <string name="info_authors_hint">Authors</string>
    <string name="info_description_hint">Description</string>
    <string name="info_isbn_hint">ISBN</string>
    <string name="info_year_hint">Year</string>
</resources>